// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WifiSignalIcon component renders with 0 green bar 1`] = `
<svg
  className="wifi-icon"
  fill="none"
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    className="no-signal"
    height="6"
    width="2"
    y="12"
  />
  <rect
    className="no-signal"
    height="9"
    width="2"
    x="4"
    y="9"
  />
  <rect
    className="no-signal"
    height="12"
    width="2"
    x="8"
    y="6"
  />
  <rect
    className="no-signal"
    height="15"
    width="2"
    x="12"
    y="3"
  />
  <rect
    className="no-signal"
    height="18"
    width="2"
    x="16"
  />
</svg>
`;

exports[`WifiSignalIcon component renders with 1 green bar 1`] = `
<svg
  className="wifi-icon"
  fill="none"
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    className="has-signal"
    height="6"
    width="2"
    y="12"
  />
  <rect
    className="no-signal"
    height="9"
    width="2"
    x="4"
    y="9"
  />
  <rect
    className="no-signal"
    height="12"
    width="2"
    x="8"
    y="6"
  />
  <rect
    className="no-signal"
    height="15"
    width="2"
    x="12"
    y="3"
  />
  <rect
    className="no-signal"
    height="18"
    width="2"
    x="16"
  />
</svg>
`;

exports[`WifiSignalIcon component renders with 2 green bars 1`] = `
<svg
  className="wifi-icon"
  fill="none"
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    className="has-signal"
    height="6"
    width="2"
    y="12"
  />
  <rect
    className="has-signal"
    height="9"
    width="2"
    x="4"
    y="9"
  />
  <rect
    className="no-signal"
    height="12"
    width="2"
    x="8"
    y="6"
  />
  <rect
    className="no-signal"
    height="15"
    width="2"
    x="12"
    y="3"
  />
  <rect
    className="no-signal"
    height="18"
    width="2"
    x="16"
  />
</svg>
`;

exports[`WifiSignalIcon component renders with 3 green bars 1`] = `
<svg
  className="wifi-icon"
  fill="none"
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    className="has-signal"
    height="6"
    width="2"
    y="12"
  />
  <rect
    className="has-signal"
    height="9"
    width="2"
    x="4"
    y="9"
  />
  <rect
    className="has-signal"
    height="12"
    width="2"
    x="8"
    y="6"
  />
  <rect
    className="no-signal"
    height="15"
    width="2"
    x="12"
    y="3"
  />
  <rect
    className="no-signal"
    height="18"
    width="2"
    x="16"
  />
</svg>
`;

exports[`WifiSignalIcon component renders with 4 green bars 1`] = `
<svg
  className="wifi-icon"
  fill="none"
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    className="has-signal"
    height="6"
    width="2"
    y="12"
  />
  <rect
    className="has-signal"
    height="9"
    width="2"
    x="4"
    y="9"
  />
  <rect
    className="has-signal"
    height="12"
    width="2"
    x="8"
    y="6"
  />
  <rect
    className="has-signal"
    height="15"
    width="2"
    x="12"
    y="3"
  />
  <rect
    className="no-signal"
    height="18"
    width="2"
    x="16"
  />
</svg>
`;

exports[`WifiSignalIcon component renders with 5 green bars 1`] = `
<svg
  className="wifi-icon"
  fill="none"
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    className="has-signal"
    height="6"
    width="2"
    y="12"
  />
  <rect
    className="has-signal"
    height="9"
    width="2"
    x="4"
    y="9"
  />
  <rect
    className="has-signal"
    height="12"
    width="2"
    x="8"
    y="6"
  />
  <rect
    className="has-signal"
    height="15"
    width="2"
    x="12"
    y="3"
  />
  <rect
    className="has-signal"
    height="18"
    width="2"
    x="16"
  />
</svg>
`;

exports[`WifiSignalIcon component renders without crashing 1`] = `
<svg
  className="wifi-icon"
  fill="none"
  height="18"
  viewBox="0 0 18 18"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    className="no-signal"
    height="6"
    width="2"
    y="12"
  />
  <rect
    className="no-signal"
    height="9"
    width="2"
    x="4"
    y="9"
  />
  <rect
    className="no-signal"
    height="12"
    width="2"
    x="8"
    y="6"
  />
  <rect
    className="no-signal"
    height="15"
    width="2"
    x="12"
    y="3"
  />
  <rect
    className="no-signal"
    height="18"
    width="2"
    x="16"
  />
</svg>
`;
